alignement correct acceuil images sauf mobile

--- a/gontaud_app/public/css/modules/accueil.css
+++ b/gontaud_app/public/css/modules/accueil.css
@@ -2,17 +2,27 @@ li {
   list-style-type:none;
 }
 
-.lesLieux .commentFaire {
+.lesLieux {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  align-items: center;
-  padding-inline-start: 0;
+  margin: 5px;
+  padding:0px;
+  list-style-type: none;
 }
 
 .imageLieu {
-  margin: 10px;
   max-width: 40%;
   vertical-align: bottom;
   object-fit:contain;
+    flex-grow: 1;
+
+}
+
+.vignette {
+  min-width: 100%;
+   max-height: 100%;
+  min-width: 100%;
+  object-fit: cover;
+  vertical-align: bottom;
 }
